Support for OV5640 with higher resolution added